# Drug-discovery-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  environment.yml.bak  pyproject.toml  requirements.txt  test_setup.py
data/: drug_discovery.db
data/processed/: dataset_molecules.csv  morgan_fp.npz
data/processed/protein_embeddings/: O14558.npy  P35968_pool.npy  P35968_tokens.npy
drug_discovery_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
drug_discovery_assistant/drug_discovery_assistant/: environment.yml  requirements.txt
models/: baseline_rf_metrics.json  tdi_cross_attn.pt  tdi_cross_attn_metrics.json  tdi_cross_attn_protein_importance.npy  tdi_mlp_metrics.json
reports/: opt_tdi_top.csv  opt_tdi_top.sdf  opt_top.csv  opt_top.sdf  rf_baseline_summary.txt  rf_cv_metrics.json  rf_cv_probs.npy  rf_hpo_best.json  vegfr2_importance_top25.csv
scripts/: app_gradio.py  app_gradio.py.bak  cv_rf.py  eval_curves.py  hpo_rf.py  model_report.sh  optimize_compounds.py  optimize_compounds.py.bak  optimize_compounds_tdi.py  optimize_quick.sh  predict_example.sh  protein_importance_report.py  protein_importance_report.py.bak  run_phase1_preprocessing.sh  run_phase1_preprocessing.sh.bak  run_tdi_baseline.sh  run_tdi_baseline.sh.bak  train_models.sh  train_tdi_cross_attn.sh
src/: cli.py
src/config/: database.py
src/models/: baselines.py  predict.py  tdi_cross_attn.py  tdi_mlp.py  train_baseline.py  train_baseline.py.bak
src/optimization/: generator.py  objectives.py  scorer.py  scorer_tdi.py
(+14 files in other folders)
